fix header search visibility

--- a/Resources/app/storefront/src/scss/layout/_search-suggest.scss
+++ b/Resources/app/storefront/src/scss/layout/_search-suggest.scss
@@ -1,10 +1,5 @@
-.search-suggest {
-    position: relative;
-}
-
 .search-suggest-container {
     padding: 10px;
-    top: 16px;
 
     @include media-breakpoint-up(md) {
         width: 100%;
